# bidscrutiny-engine

./: .dockerignore  .env.example  .gitignore  .replit  CLEANUP_COMPLETE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  FIXES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  LOCAL_TESTING.md  PRODUCTION_READY.md  Procfile  QUICK_START.md  RAILWAY_CHECKLIST.md  REPLIT_SETUP.md  TIMEOUT_EXPLANATION.md  aptfile  build.sh  check-deployment.sh  fly.toml  git-setup.ps1  nixpacks.toml  package-lock.json  pyproject.toml  railway.toml  render-build.sh  render.yaml  replit.nix  requirements.txt  setup-railway.ps1  setup_env.py  start.py  start.sh
app/: audit.py  main.py  report_generator.py
app/api/: tender_routes.py  vendor_routes.py
app/comparison/: compare_agents.py
app/core/: config.py  firebase_init.py
app/crypto/: hash_utils.py  signature_agent.py  signature_utils.py
app/intelligence/: comparison_agent.py  fraud_agents.py  model_loader.py  reasoning_agent.py  tender_extractor.py  vendor_extractor.py
app/ocr/: ocr_engine.py
app/pipelines/: tender_pipeline.py  vendor_pipeline.py
app/storage/: vendor_storage.py
frontend/: .env.production  COMPONENT_GUIDE.md  DEPLOYMENT_CHECKLIST.md  FRONTEND_DOCS.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  TESTING_GUIDE.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  AuditTrail.jsx  index.css
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: ComparisonPage.jsx  Dashboard.jsx  EvaluationPage.jsx  Login.jsx  TenderBidsPage.jsx  TenderUploadPage.jsx  VendorUploadPage.jsx
(+17 files in other folders)
