[tool.poetry]
name = "bidscrutiny-engine"
version = "1.0.0"
description = "AI-powered government tender evaluation system"
authors = ["BidScrutiny"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "==0.110.0"
uvicorn = {extras = ["standard"], version = "==0.27.1"}
gunicorn = "==21.2.0"
python-multipart = "==0.0.9"
python-dotenv = "==1.0.1"
firebase-admin = "==6.5.0"
google-cloud-firestore = "==2.16.0"
google-cloud-storage = "==2.16.0"
google-generativeai = "==0.5.4"
pymupdf = "==1.24.1"
pypdf = "==4.2.0"
pdf2image = "==1.17.0"
pytesseract = "==0.3.10"
Pillow = "==10.3.0"
cryptography = "==42.0.5"
asn1crypto = "==1.5.1"
endesive = "==2.17.2"
pydantic = "==2.6.4"
regex = "==2024.4.28"
pytest = "==8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
